--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -1815,5 +1815,6 @@
   "YouTube": "",
   "Youtube Language": "",
   "Youtube Proxy URL": "",
-  "Picture caption insertion": ""
+  "Picture caption insertion": "",
+  "Containers": ""
 }
