feat: force enabling function

--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -1816,5 +1816,6 @@
   "Youtube Language": "",
   "Youtube Proxy URL": "",
   "Picture caption insertion": "",
-  "Containers": ""
+  "Containers": "",
+  "Force Enabled": ""
 }
