--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -1815,5 +1815,6 @@
   "Youtube Language": "YouTube 語言",
   "Youtube Proxy URL": "YouTube 代理伺服器 URL",
   "Picture caption insertion": "插入圖片標題",
-  "Containers": "容器"
+  "Containers": "容器",
+  "Force Enabled": "強制開啟"
 }
